[package]
name = "v8_killer_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
frida-gum = { version = "0.13.2", features = ["auto-download", "invocation-listener"] }
lazy_static = "1.4.0"
ctor = "0.2.4"
toml = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
regex = "1.10.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
