[package]
name = "v8_killer_launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
human-panic = "1.2.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51.1", features = [
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_Security",
] }
